WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131134
RemoteLayerBackingStore doesn't need to clear opaque layers
https://bugs.webkit.org/show_bug.cgi?id=131134
Summary
RemoteLayerBackingStore doesn't need to clear opaque layers
Tim Horton
Reported
2014-04-02 15:38:26 PDT
We should also fill opaque layers with a bright color in debug builds to aid in debugging opaqity issues.
Attachments
patch
(2.12 KB, patch)
2014-04-02 15:40 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2014-04-02 15:40:00 PDT
Created
attachment 228434
[details]
patch
WebKit Commit Bot
Comment 2
2014-04-02 16:29:38 PDT
Comment on
attachment 228434
[details]
patch Clearing flags on attachment: 228434 Committed
r166675
: <
http://trac.webkit.org/changeset/166675
>
WebKit Commit Bot
Comment 3
2014-04-02 16:29:42 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug