RemoteLayerBackingStore doesn't need to clear opaque layers https://bugs.webkit.org/show_bug.cgi?id=131134

Reviewed by Simon Fraser.

* Shared/mac/RemoteLayerBackingStore.mm:
(WebKit::RemoteLayerBackingStore::display):
We don't need to clear opaque layers, because we'll paint
over the whole area. In addition, we should fill opaque layers
with a bright color in debug builds to make it very clear
that we've made a mistake (similar to what FrameView does).


Canonical link: https://commits.webkit.org/149179@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166675 268f45cc-cd09-0410-ab3c-d52691b4dbfc